// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should include a className if set 1`] = `
<div>
  <a
    class="transition-colors duration-500 text-pink-500 hover:text-pink-400 test"
    href="/en-US#"
    hreflang="en-US"
  >
    Test 123
  </a>
</div>
`;

exports[`Link should render with default locale set 1`] = `
<div>
  <a
    class="transition-colors duration-500 text-pink-500 hover:text-pink-400 "
    href="/en-US#"
    hreflang="en-US"
  >
    Test 123
  </a>
</div>
`;
